# TestingCats

./: main.py  pyproject.toml
.github/workflows/: pytest.yaml
notebooks/: example.ipynb
src/cats/: cat.py  math.py
tests/: test_math.py
